# frenPY

./: .gitignore  MANIFEST.in  README.md  build.bat  main.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
example/: HelloWorld.frenpy
frenpy/: __init__.py  main.py  words.json
