[project]
name = "FRENPY"
version = "0.3.3"
authors = [
  { name="slohwnix" },
]
description = "FRENPY is a french version of python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/slohwnix/frenPY/"
Issues = "https://github.com/slohwnix/frenPY/issues"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
